Parametrized performance tests with different JVM options